--- a/UI/pom.xml
+++ b/UI/pom.xml
@@ -2,16 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.openemap</groupId>
 	<artifactId>adm-client</artifactId>
 	<packaging>war</packaging>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>RIGES Administration Client</name>
-	
-	<parent>
-		<groupId>se.riges</groupId>
-		<artifactId>riges-parent</artifactId>
-		<version>0.1.0</version>
-	</parent>
 	
 	<build>
 	<plugins>
