Development environment changes.

--- a/OpeEMapAdmin/pom.xml
+++ b/OpeEMapAdmin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openemap</groupId>
   <artifactId>openemap-admin</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.5.0-rc.4</version>
   <packaging>war</packaging>
   <repositories> 
  		<repository>
@@ -13,8 +13,8 @@
             <updatePolicy>always</updatePolicy>
         </snapshots>
     </repository>
-    </repositories>
-    <dependencies>
+  </repositories>
+  <dependencies>
     <dependency>
     	<artifactId>openhierarchy-framework</artifactId>
     	<groupId>se.unlogic</groupId>
@@ -25,23 +25,23 @@
     	<groupId>org.openemap</groupId>
     	<version>1.0</version>
     </dependency>
-    </dependencies>
-    <build>
-        <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>2.4</version>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.1</version>
-            <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
-            </configuration>
-        </plugin>
-    </plugins>
-    </build>
+  </dependencies>
+  <build>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-war-plugin</artifactId>
+              <version>2.4</version>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.1</version>
+              <configuration>
+                  <source>1.7</source>
+                  <target>1.7</target>
+              </configuration>
+          </plugin>
+      </plugins>
+  </build>
 </project>
