--- a/OpeEMapAdmin/pom.xml
+++ b/OpeEMapAdmin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openemap</groupId>
   <artifactId>openemap-admin</artifactId>
-  <version>1.5.0-rc.4</version>
+  <version>1.5.0</version>
   <packaging>war</packaging>
   <repositories> 
  		<repository>
