--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "OpenEMap-Admin",
-  "version": "1.6.2",
+  "version": "1.6.3-hf.1",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-auto-install": "^0.2.4",
